# hadron-rs

./: CLAUDE.md  Cargo.toml  README.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.1-去除-JDBC-实现-REQUIREMENTS.md  v1.1-去除-JDBC-实现-ROADMAP.md
.planning/phases/01-清理-JDBC-和-CLI-模式/: 01-01-PLAN.md  01-01-SUMMARY.md
.planning/phases/02-Test-Infrastructure/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md
.planning/phases/03-unit-tests/: 03-01-PLAN.md  03-02-PLAN.md  03-03-PLAN.md  03-04-PLAN.md  03-05-PLAN.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
octopus-cli/src/: main.rs
octopus-common/: Cargo.toml
octopus-common/src/: lib.rs
octopus-common/src/test_utils/: federated.rs  fixture.rs  mock.rs  mod.rs  timeout.rs
octopus-coordinator/: Cargo.toml
octopus-coordinator/src/: test_utils.rs
octopus-executor/: Cargo.toml
wiki/: .config.yml  .index.json  overview.md
wiki/concepts/: architecture.md  coordinator.md  exchange.md  execution.md  federated-queries.md  udf-registry.md  worker-runtime.md
wiki/guides/: cli-usage.md  quickstart.md
wiki/reference/: crates.md
