[package]
name = "octopus-common"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, optional = true }

# Federated connector - traits only (actual DB drivers in connector crates)
deadpool = "0.12"

# For connection pool management
async-trait = { workspace = true }

# Re-export datafusion types for trait definitions
datafusion = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-common = { workspace = true }

[features]
test-utils = ["dep:tokio"]

[dev-dependencies]
mockall = { workspace = true }
tempfile = { workspace = true }